Fix bug: Pokemon name if too large distorts arrangement

--- a/app.css
+++ b/app.css
@@ -47,6 +47,13 @@
         font-family: monospace;
     }
 
+    #player1{
+        width: 140px;
+    }
+
+    #player2{
+        width: 140px;
+    }
 }
 
 
@@ -90,6 +97,14 @@
         cursor: pointer;
         font-family: monospace;
         font-size: small;
+    }
+
+    #player1{
+        width: 103px;
+    }
+
+    #player2{
+        width: 103px;
     }
 }
 
@@ -198,13 +213,14 @@ h3{
     display: flex;
     flex-direction: column;
     align-items: center;
-
+    min-height: 180px;
 }
 
 #player2{
     display: flex;
     flex-direction: column;
     align-items: center;
+    min-height: 180px;
 }
 
 
